# genEnv

./: .gitignore  compile_commands.json  test  test.cpp
res/shaders/: FS_coloredModel.glsl  FS_texturedModel.glsl  VS_coloredModel.glsl  VS_texturedModel.glsl  fragmentShader.glsl  vertexShader.glsl
src/: CMakeLists copy.txt  CMakeLists.txt
src/core/: Core.cpp
src/ecs/genecs/: Entity.cpp  Entity.h  GuiElement.cpp  GuiElement.hpp
src/ecs/genecs/components/: ComponentManager.cpp  ComponentManager.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Transform.cpp
src/engine/: Clock.cpp  Clock.h
src/graphics/opengl/: GLTexture.cpp  GLTexture.h  Math.h  OpenGL.cpp  OpenGL.h  RawData.cpp  RawData.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h
src/graphics/opengl/math/: Mat4.cpp  Math.h  Vec4.cpp
src/io/glfw/: Glfw.cpp  Glfw.h  Window.cpp  Window.h
src/model/: Color.cpp  Color.hpp  ColoredModel.cpp  ColoredModel.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  TexturedModel.cpp  TexturedModel.hpp  Transform.cpp  Transform.h
